--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -176,6 +176,30 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure
+  configure-infrastructure:
+    docker:
+      - image: ansible/ansible:ubuntu1404
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "f9:ce:81:f5:7a:3d:ea:e3:72:a2:4c:8f:89:c0:c8:41"
+      - run:
+          name: Adding fingerprint
+          command: |
+            ssh -v ${USER_NAME}@${HOST_NAME}
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install dependencies
+          command: |
+            yum install -y tar gzip ansible awscli
+      - run:
+          name: Configure server
+          command: |
+            cd .circleci.ansible
+            ansible-playbook -i inventory.txt configure-server.yml
+      # Here's where you will add some code to rollback on failure
 
 workflows:
   default:
