--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,5 +219,7 @@ workflows:
           filters:
             branches:
               only: [test-feature-branch]
+      - configure-infrastructure:
+          requires: [ deploy-infrastructure ]
 #     - deploy:
 #         context: slack-secrets
