--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -190,9 +190,7 @@ jobs:
       - run:
           name: Adding fingerprint
           command: |
-            ssh -o UserKnownHostsFile=/dev/null \
-              -o StrictHostKeyChecking=no \ 
-              -v ${USER_NAME}@${HOST_NAME}
+            ssh -o UserKnownHostsFile=/dev/null StrictHostKeyChecking=no -v ${USER_NAME}@${HOST_NAME}
       - run:
           name: Install dependencies
           command: |
