--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -190,7 +190,7 @@ jobs:
       - run:
           name: Adding fingerprint
           command: |
-            ssh -o UserKnownHostsFile=/dev/null StrictHostKeyChecking=no -v ${USER_NAME}@${HOST_NAME}
+            ssh -o StrictHostKeyChecking=no -vv ${USER_NAME}@${HOST_NAME}
       - run:
           name: Install dependencies
           command: |
