--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -15,10 +15,11 @@
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
       wait_for_connection:
-        timeout: 600
 
     - name: "install python for Ansible."
-      raw: apt -y update && apt install -y python-minimal
+      become: true
+      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+      changed_when: false
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
@@ -33,4 +34,4 @@
     - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
 
   roles:
-    - setup
+    - configure-server
