--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -242,5 +242,7 @@ workflows:
               only: [test-feature-branch]
       - configure-infrastructure:
           requires: [ deploy-infrastructure ]
+      - run-migrations:
+          requires: [ configure-infrastructure ]
 #     - deploy:
 #         context: slack-secrets
