--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,6 +207,7 @@ jobs:
           name: Run migrations
           command: |
             cd backend
+            npm cache clean –force
             npm install
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
