--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,6 +210,7 @@ jobs:
             npm update 
             npm cache clean --force
             npm install
+            npm run build
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
       - run:
