--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,12 +203,13 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
+      - restore_cache:
+          - keys: [ migrate-backend ]
       - run:
           name: Run migrations
           command: |
             cd backend
             npm install
-            npm run build
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
       - run:
@@ -221,6 +222,9 @@ jobs:
               # If you are using kvdb.io, generate the bucket ID "9GE4jRtKznmVKRfvdBABBe" in your local terminal first
               curl https://kvdb.io/Ru682osuUW14eAadnG4dq8/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
+      - save_cache:
+          paths: [ backend/node-modules ]
+          key: migrate-backend
       # Here's where you will add some code to rollback on failure
 
 workflows:
