--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,7 +204,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          - keys: [ migrate-backend ]
+          keys: [ migrate-backend ]
       - run:
           name: Run migrations
           command: |
