--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,8 +203,8 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - restore_cache:
-          keys: [ migrate-backend ]
+      - attach_workspace:
+          at: ~/
       - run:
           name: Run migrations
           command: |
@@ -212,6 +212,7 @@ jobs:
             npm install
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
       - run:
           name: Send migration results to memstash
           command: |
@@ -220,9 +221,6 @@ jobs:
               # If you are using kvdb.io, generate the bucket ID "Ru682osuUW14eAadnG4dq8" in your local terminal first
               curl https://kvdb.io/Ru682osuUW14eAadnG4dq8/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
-      - save_cache:
-          paths: [ backend/node_modules ]
-          key: migrate-backend
       # Here's where you will add some code to rollback on failure
 
 workflows:
