--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -265,6 +265,36 @@ jobs:
       - undo_migrations
       # Here's where you will add some code to rollback on failure
 
+  deploy-backend:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "f9:ce:81:f5:7a:3d:ea:e3:72:a2:4c:8f:89:c0:c8:41"
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update curl nodejs npm ansible zip
+            pip install awscli
+      - run:
+          name: Deploy backend
+          command: |
+            cd backend
+            npm i
+            npm run build
+            cd ..
+            tar -C backend -czvf artifact.tar.gz .
+            cd .circleci/ansible
+            echo "Contents  of the inventory.txt file is -------"
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml
+      - undo_migrations
+      # Here's where you will add some code to rollback on failure
+
 workflows:
   default:
     jobs:
@@ -288,6 +318,8 @@ workflows:
       - run-migrations:
           requires: [ configure-infrastructure ]
       - deploy-frontend:
+          requires: [ run-migrations ]
+      - deploy-backend:
           requires: [ run-migrations ]
 #     - deploy:
 #         context: slack-secrets
