--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -293,7 +293,46 @@ jobs:
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
       - undo_migrations
-      # Here's where you will add some code to rollback on failure
+
+  smoke-test:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update curl
+            pip install awscli
+      - run:
+          name: Get backend url
+          command: |
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+      - run:
+          name: Backend smoke test.
+          command: |
+            if curl "${API_URL}/api/status" | grep "ok"
+            then
+                return 0
+            else
+                return 1
+            fi
+      - run:
+          name: Frontend smoke test.
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/"
+            echo ${URL}
+            if curl -s ${URL} | grep "Welcome"
+            then
+                # Change this to 0 after the job fails
+                return 1
+            else
+                return 1
+            fi
+      - undo_migrations
 
 workflows:
   default:
@@ -321,5 +360,7 @@ workflows:
           requires: [ run-migrations ]
       - deploy-backend:
           requires: [ run-migrations ]
+      - smoke-test:
+          requires: [ deploy-backend, deploy-frontend ]
 #     - deploy:
 #         context: slack-secrets
