--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,7 +247,10 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            export BACKEND_IP=$(aws ec2 describe-instances...............)
+            export BACKEND_IP=$(aws ec2 --region us-east-1 describe-instances \ 
+              --filters "Name=instance-state-name,Values=running" \
+              --query 'Reservations[*].Instances[*].[PublicIpAddress]' \
+              --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "API_URL = ${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
@@ -309,6 +312,10 @@ jobs:
       - run:
           name: Get backend url
           command: |
+            export BACKEND_IP=$(aws ec2 --region us-east-1 describe-instances \ 
+              --filters "Name=instance-state-name,Values=running" \
+              --query 'Reservations[*].Instances[*].[PublicIpAddress]' \
+              --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
       - run:
