--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,7 +247,7 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            export BACKEND_IP=$(aws ec2 --region us-east-1 describe-instances \ 
+            export BACKEND_IP=$(aws --region us-east-1 ec2 describe-instances \ 
               --filters "Name=instance-state-name,Values=running" \
               --query 'Reservations[*].Instances[*].[PublicIpAddress]' \
               --output text)
@@ -312,7 +312,7 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            export BACKEND_IP=$(aws ec2 --region us-east-1 describe-instances \ 
+            export BACKEND_IP=$(aws --region us-east-1 ec2 describe-instances \ 
               --filters "Name=instance-state-name,Values=running" \
               --query 'Reservations[*].Instances[*].[PublicIpAddress]' \
               --output text)
