--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -307,14 +307,11 @@ jobs:
             apk add --update curl
             pip install awscli
       - run:
-          name: Get backend url
+          name: Get backend url && Backend smoke test.
           command: |
             export BACKEND_IP=$(aws --region us-east-1 ec2 describe-instances --filters "Name=instance-state-name,Values=running" --query 'Reservations[*].Instances[*].[PublicIpAddress]' --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
-      - run:
-          name: Backend smoke test.
-          command: |
             if curl "${API_URL}/api/status" | grep "ok"
             then
                 return 0
