--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,36 +1,52 @@
 ---
-- name: "Creates backend directory"
+- name: "install dependencies."
+  become: true
+  apt:
+    name: ["nodejs", "npm"]
+    state: latest
+    update_cache: yes
+
+- name: "install pm2"
+  become: true
+  npm:
+    name: pm2
+    global: yes
+    production: yes
+    state: present
+
+- name: create backend directory
   file:
-    path: ~/backend
+    path: /home/ubuntu/backend
     state: directory
 
-- name: "Copy compiled backend"
-  copy:
-    src: dist.zip
-    dest: "~/backend/dist.zip"
+- name: copy backend dist files
+  ansible.builtin.unarchive:
+    src: artifact.tar.gz
+    dest: /home/ubuntu/backend
 
-- name: "Unzip backend files to EC2 Instance"
+- name: unpack backend
   shell: |
-    cd ~/backend
-    unzip dist.zip
-    rm -rf dist.zip
-
-- name: "Install dependencies for project"
+    cd /home/ubuntu/
+    tar xvzf artifact.tar.gz -C .
+    ls -la
+- name: install node
   shell: |
-    cd ~/backend
+    cd /home/ubuntu/backend
     npm install
-
-- name: "Executing node"
+    npm install --only=dev
+- name: Build package
   shell: |
-    export
-    cd ~/backend
-    pm2 start main.js
-  register: execute_node
-
-- name: print output message
-  debug:
-    msg: "{{ execute_node.stdout_lines }}"
-
-- name: "Configure pm2 to start as service"
+    cd /home/ubuntu/backend
+    npm run build
+    cat .env
+    npm run prestart:prod
+- name: start backend app
   shell: |
-    env PATH=$PATH:/usr/local/bin pm2 startup -u ubuntu
+    cd /home/ubuntu/backend
+    pm2 stop default
+    pm2 start npm --name backend -- start
+- name: start main.js
+  become: no
+  shell: pm2 start main.js
+  args:
+    chdir: /home/ubuntu/backend/dist
