--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,16 +18,23 @@ commands:
             aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflow_id>> --region us-east-1
             aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
             aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>> --region us-east-1
-  undo_migrations:
+
+  revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
+    parameters:
+      workflow_id:
+        type: string
     steps:
       - run:
           name: Revert migrations
           when: on_fail
           command: |
-            cd ~/project/backend
-            if [[ -f "curl -k https://kvdb.io/Ru682osuUW14eAadnG4dq8/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'" ]]; then
-              npm i
+            # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
+            SUCCESS =$(curl --insecure  https://kvdb.io/Ru682osuUW14eAadnG4dq8/migration_<< parameters.workflow_id >>)
+            if(( $SUCCESS==1 )); 
+            then
+              cd ~/project/backend
+              npm install
               npm run migration:revert
             fi
 
@@ -184,7 +191,8 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      # Here's where you will add some code to rollback on failure
+      - revert-migrations
+
   configure-infrastructure:
     docker:
       - image: python:3.7-alpine3.11
@@ -204,7 +212,7 @@ jobs:
           command: |
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
-      # Here's where you will add some code to rollback on failure
+      - revert-migrations
 
   run-migrations:
     docker:
@@ -229,7 +237,7 @@ jobs:
               # If you are using kvdb.io, generate the bucket ID "Ru682osuUW14eAadnG4dq8" in your local terminal first
               curl -k https://kvdb.io/Ru682osuUW14eAadnG4dq8/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
-      # Here's where you will add some code to rollback on failure
+      - revert-migrations
 
   deploy-frontend:
     docker:
@@ -261,8 +269,7 @@ jobs:
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       - destroy_environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-      - undo_migrations
-      # Here's where you will add some code to rollback on failure
+      - revert-migrations
 
   deploy-backend:
     docker:
@@ -296,7 +303,7 @@ jobs:
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy_environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-      - undo_migrations
+      - revert-migrations
 
   smoke-test:
     docker:
@@ -329,12 +336,11 @@ jobs:
             echo ${URL}
             if curl -s ${URL} | grep "Welcome"
             then
-                # Change this to 0 after the job fails
-                return 1
+                return 1 
             else
                 return 1
             fi
-      - undo_migrations
+      - revert-migrations
 
 workflows:
   default:
